--- a/front/src/fonts/font.css
+++ b/front/src/fonts/font.css
@@ -1,1 +1,10 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
+
+/*여름물빛체*/
+@font-face {
+  font-family: "HSSummer";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/HSSummer.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
